[gd_scene load_steps=3 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://blieBla.gd" type="Script" id=2]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="CoolAnimations" type="AnimatedSprite" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="SpriteBro" type="Sprite" parent="CoolAnimations"]

[node name="SpriteBro" type="Sprite" parent="."]

[node name="blieBla" type="Sprite" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
