extends Node2D

### Automatic References Start ###
onready var _blie_bla: BlieBla = $blieBla
onready var _cool_animations: AnimatedSprite = $CoolAnimations
onready var _sprite_bro: Sprite = $CoolAnimations/SpriteBro
onready var _sprite_bro_1: Sprite = $SpriteBro
### Automatic References Stop ###

const LOL = 4

func _ready() -> void:
	pass
